apps/garage/ingress-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-web
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage-web.k3s.crussell.io`)
      kind: Rule
      services:
        - name: garage
          port: 3902
  tls:
    certResolver: letsencrypt
