apps/garage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage.k3s.crussell.io`)
      kind: Rule
      services:
        - name: garage
          port: 3900
  tls:
    certResolver: letsencrypt
